--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 						<li><a href='#'>Home</a></li>
 						<li><a href='#story'>Our Story</a></li>
 						<li><a href='#engagement'>Engagement</a></li>
-						<li><a href='#rsvp'>RSVP</a></li>
 						<li><a href='#wedding'>Wedding</a></li>
 						<li><a href='#directions'>Directions</a></li>
+						<li><a href='#gallery'>Gallery</a></li>
+						<li><a href='#rsvp'>RSVP</a></li>
 					</nav>
 					<div id='header-text'>
 						<h1 id='top-name'>Hannah</h1>
@@ -47,50 +48,53 @@
 						</div>
 					</div>
 				</div>
+				<div class='section' id='wedding'>
+					<img class='section-image' src='./styles/images/wedding.jpg' />
+
+					<div class='section-container' id='wedding-text-container'>
+						<div>
+						<span class='section-title-alt'>The Wedding Venue</span>
+						</div>	
+						<img class='section-image' src='./styles/images/mansion1.jpg' />	
+						<div id='wedding-section'>
+							<div>
+								<h3>When</h3>
+								<h4>Sunday, September 2<span class='superscript'>nd</span>, 2018</h4>
+								<h4>6:00PM EST</h4>
+							</div>
+							<div>
+								<h3>Where</h3>
+								<h4><a class='link' href="http://www.pgelegantsettings.com/Our_Sites/Newton_White_Mansion.htm">Newton White Mansion</a></h4>
+								<h4>2708 Enterprise Road</h4>
+								<h4>Mitchellville, MD 20721</h4>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class='section' id='directions'>
+					<iframe
+					  width="600"
+					  height="450"
+					  frameborder="0" style="border:0"
+					  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBOowFP-Od2iQW-skqEoRUQpPm0flgIq90
+					    &q=Newton White Mansion Mitchellville, MD" allowfullscreen>
+					</iframe>
+				</div>
 				<div class='section' id='rsvp'>
 					<img class='section-image' src='./styles/images/rsvp.jpg' />
 					<div class='section-container' id='rsvp-text-container'>
 						<div>
 							<span class='section-title'>RSVP</span>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pharetra pellentesque turpis ac egestas. Proin elementum diam odio, eu vestibulum est suscipit vitae. Nunc pulvinar lobortis sapien. Vestibulum a justo quis ipsum consequat porta id sed lacus. Nullam ut sapien eu mauris bibendum vehicula id vel ante. Phasellus eleifend et ligula et iaculis. Donec non auctor massa, et aliquam turpis.</p>
+							<div class='align-center'><button>Click to RSVP</button></div>
 						</div>
-					</div>
-				</div>
-				
-				<div class='section' id='wedding'>
-					<div>
-						<span class='section-title-alt'>The Wedding Venue</span>
-					</div>
-					<div>
-						<div>
-							<span>When</span>
-							<h3>6:00PM EST</h3>
-						</div>
-						<div>
-							<span>Where</span>
-							<h3>Newton White Mansion</h3>
-							<h3>2708 Enterprise Road</h3>
-							<h3>Mitchellville, MD 20721</h3>
-						</div>
-					</div>
-					<div class='picture-wrapper'>
-						<img src='./styles/images/mansion1.jpg' />
-					</div>
-					<div class='picture-wrapper'> 
-						<img src='./styles/images/mansion2.jpg' />
-					</div>
-					<div id='directions'>
-						<iframe
-						  width="600"
-						  height="450"
-						  frameborder="0" style="border:0"
-						  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBOowFP-Od2iQW-skqEoRUQpPm0flgIq90
-						    &q=Newton White Mansion Mitchellville, MD" allowfullscreen>
-						</iframe>
 					</div>
 				</div>
 				
 			</div>
+			<footer>
+				<a href="https://www.freepik.com/free-photo/pink-rose-and-petals-over-light-pink-background-with-space-in-the-middle_1371177.htm">Images courtesy of Freepik</a>
+			</footer>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 		<script src="js/wedding.js"></script>
