added bridalparty section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,30 @@
 						</div>
 					</div>
 				</div>
+				<div class='section' id='bridal-party'>
+					<div id='bridesmaids'>
+						<span class='section-title-alt'>Bridesmaids</span>
+						<h3>Maid of Honor</h3>
+						<ul class='bridal-party-profile-list'>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+					<div id='groomsmen-women'>
+						<span class='section-title-alt'>Groomsmen/Groomswomen</span>
+						<h3>Best Man</h3>
+						<ul class='bridal-party-profile-list'>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</div>
 				<div class='section' id='directions'>
 					<iframe
 					  width="600"
