fixing dumb images from case

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<div>
 								<h3>When</h3>
 								<h4>Sunday, September 2<span class='superscript'>nd</span>, 2018</h4>
-								<h4>6:00PM EST</h4>
+								<!--<h4>6:00PM EST</h4>-->
 							</div>
 							<div>
 								<h3>Where</h3>
