Further optimized images, added new ones, fixed typos, css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class='section-container' id='story-text-container'>
 						<div>
 							<span class='section-title'>Our Story</span>
-							<p>It all began with a hat. Patrick and Hannah first met at a Georgetown Greek mixer in the winter of 2010. He was from the University of Maryland, and she was from the University of Virginia. Hannah was skeptical and unimpressed by Patrick, but intrigued. After the party, Hannah requested to take Patrick's hat. Although their initial meeting was unremarkable, they always kept in touch, until Patrick decided to retrieve his hat back from UVA. </p>
+							<p>It all began with a hat. Patrick and Hannah first met at a GWU Greek mixer in the winter of 2010. He was from the University of Maryland, and she was from the University of Virginia. Hannah was skeptical and unimpressed by Patrick, but intrigued. After the party, Hannah requested to take Patrick's hat. Although their initial meeting was unremarkable, they always kept in touch, until Patrick decided to retrieve his hat back from UVA. </p>
 							<p>
 								From there, Hannah and Patrick became inseparable. Even the blizzard of 2010 couldn't keep them apart. From College Park to Charlottesville, from North Potomac to West Chester and Virginia Beach they would always visit each other at every opportunity. Whether it was stay at home TV/Movie night, a trip downtown, or a vacation abroad, Hannah and Patrick always enjoyed each others company. 
 							</p>
@@ -146,7 +146,7 @@
 							where we are.
 							</p>
 							<p>
-							I am very excited to be a part of Hannah and Patrick’s special day. I remember when Hannah
+							I am very excited to be a part of Hannah and Patrick's special day. I remember when Hannah
 							and Patrick started dating and Hannah told me that Patrick was super nice and not like the other guys
 							she dated in the past. Hannah and Patrick have a rather unique dynamic that is always entertaining to
 							witness. They complement each other so well and I look forward to spending more time with them as a
@@ -160,7 +160,7 @@
 							</div>
 						<div id='katie-bio'>
 							<h3>Kate Hamby</h3>
-							<p>Hannah and I met in freshman year of high school; we bonded over CosmoGirl and TeenVogue magazines in study hall. For the next few years we spent just about every weekend together, window shopping at the mall and eating copious amount of fast food! We’ve remained close over the last 15 years despite our different area codes, chatting on the phone when we have a few spare minutes and catching up over drinks when she comes into town. Hannah is nonjudgmental and supportive, but also the type of friend you can always count on for the unabashed truth. I’ve loved growing alongside of her all of these years, and I am so excited to be a part of her wedding day!
+							<p>Hannah and I met in freshman year of high school; we bonded over CosmoGirl and TeenVogue magazines in study hall. For the next few years we spent just about every weekend together, window shopping at the mall and eating copious amount of fast food! We've remained close over the last 15 years despite our different area codes, chatting on the phone when we have a few spare minutes and catching up over drinks when she comes into town. Hannah is nonjudgmental and supportive, but also the type of friend you can always count on for the unabashed truth. I've loved growing alongside of her all of these years, and I am so excited to be a part of her wedding day!
 							</p>
 						</div>
 						<div id='olivia-bio'>
