Replaced picture, cleared typo

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<li id='jenny'></li>
 								<li id='katie'></li>
 								<li id='olivia'></li>
-								<li id='winnie'></li>
+								<li id='wennie'></li>
 							</ul>
 						</div>
 					</div>
@@ -169,8 +169,8 @@
 							Hannah and I met our freshman year of high school. Hannah, Katie, Erin and I formed an unlikely foursome, passing notes during the day and passing hours on the phone at night. At first, I thought Hannah was quiet, but as i got to know her, I found that we had plenty to talk about. Both of us had (annoying) big brothers, hard-working immigrant moms, and similar goals and dreams.  We liked DIY crafts, yummy food, bargain shopping, and just spending time together — and still love these same things 15 years later. Whether we are down the hall, down the street or across the country, we will always be there for each other. 
 							</p>
 						 </div>
-						<div id='winnie-bio'>
-							<h3>Winnie Sung</h3>
+						<div id='wennie-bio'>
+							<h3>Wennie Sung</h3>
 							<p>
 							'There is no better friend than a sister, and there is no better sister than you.' Hannah is my sorority little sister and I am so grateful that we have been there for each other since we first met at UVA. In college, we bonded over midnight funnel cake making and countless hours trying to figure out life :) Over the years, we have navigated through different stages of life and continued to create many fond memories together. I am very excited to be part of Hannah's bridal party especially because it may include helping her pick out the best cake! 
 							</p>
