--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 						<div id='groomsmen-bio' class='bridal-bio'>
 							</div>
 							<ul id='groomsmen-pic-list' class='bridal-party-profile-list'>
+								<li id='winston'></li>
 								<li id='donna'></li>
-								<li class='no-bio'></li>
 								<li class='no-bio'></li>
 								<li class='no-bio'></li>
 								<li class='no-bio'></li>
@@ -174,6 +174,12 @@
 							<p>
 							'There is no better friend than a sister, and there is no better sister than you.' Hannah is my sorority little sister and I am so grateful that we have been there for each other since we first met at UVA. In college, we bonded over midnight funnel cake making and countless hours trying to figure out life :) Over the years, we have navigated through different stages of life and continued to create many fond memories together. I am very excited to be part of Hannah's bridal party especially because it may include helping her pick out the best cake! 
 							</p>
+						</div>
+						<div id='winston-bio'>
+							<h3>Winston Zhou</h3>
+							<h3>Best Man</h3>
+							<p>I am very excited for Patrick and Hannah's wedding next year. It brings me great pleasure to be Patrick's best man. One of the most striking things about Patrick is that he's always a very reliable person. Even though him and I have an almost eight year age gap, I can always seek help from him whenever needed. From teaching me how to utilize computer software to my schoolwork, Patrick has always been there.</p>
+							<p>He's one of the most honest and moral persons that I know to this day. One of the most important thing's that I have learned from Patrick is the importance of family and what it means to cherish time with loved ones. Patrick and Hannah's bond is very admirable and I hope that their wedding will be amazing. </p>
 						</div>
 						<div id='donna-bio'>
 							<h3>Donna Siu</h3>
