--- a/app/index.html
+++ b/app/index.html
@@ -115,13 +115,13 @@
 					<div id='groomsmen-women'>
 						<span class='section-title-alt'>Groomsmen/Groomswomen</span>
 						<div  id='groomsmen-wrapper' class='bridal-party-wrapper'>
-						<div id='groomsmen-bio' class='bridal-bio'>
+							<div id='groomsmen-bio' class='bridal-bio'>
 							</div>
-						<ul id='groomsmen-pic-list' class='bridal-party-profile-list'>
-						  <li id='winston'></li>
+							<ul id='groomsmen-pic-list' class='bridal-party-profile-list'>
+							  	<li id='winston'></li>
 								<li id='donna'></li>
-								<li class='aaron'></li>
-								<li class='brian'></li>
+								<li id='aaron'></li>
+								<li id='brian'></li>
 								<li class='no-bio'></li>
 								<li class='no-bio'></li>
 							</ul>
@@ -183,16 +183,20 @@
 						</div>
 						<div id='aaron-bio'>
 						  <h3>Aaron Sampliner</h3>
+							<p>
+							  Patrick and I met in middle school years and years ago. We were fast friends and always would play games together, we were the best 2v2 team around! We even share the same interest in cars. We've kept in touch since we were kids, even though we've both moved away from home. I cannot wait for your celebration and I'm really excited for you and Hannah!
+							</p>
 						</div>
-						<p>
-						  Patrick and I met in middle school years and years ago. We were fast friends and always would play games together, we were the best 2v2 team around! We even share the same interest in cars. We've kept in touch since we were kids, even though we've both moved away from home. I cannot wait for your celebration and I'm really excited for you and Hannah!
-						</p>
 						<div id='winston-bio'>
 						  <h3>Winston Zhou</h3>
 						  <h3>Best Man</h3>
 						  <p>I am very excited for Patrick and Hannah's wedding next year. It brings me great pleasure to be Patrick's best man. One of the most striking things about Patrick is that he's always a very reliable person. Even though him and I have an almost eight year age gap, I can always seek help from him whenever needed. From teaching me how to utilize computer software to my schoolwork, Patrick has always been there.</p>
 						  <p>He's one of the most honest and moral persons that I know to this day. One of the most important thing's that I have learned from Patrick is the importance of family and what it means to cherish time with loved ones. Patrick and Hannah's bond is very admirable and I hope that their wedding will be amazing. </p>
-						  </div>
+					    </div>
+					    <div id='brian-bio'>
+						  <h3>Brian Tajo</h3>
+						  <p>Brian is Hannah's older brother.</p>
+					    </div>
 					</div>
 				</div>
 				<!--
