Additional church wedding changes + charles profile

--- a/app/index.html
+++ b/app/index.html
@@ -122,7 +122,7 @@
 								<li id='donna'></li>
 								<li id='aaron'></li>
 								<li id='brian'></li>
-								<li class='no-bio'></li>
+								<li id='charles'></li>
 								<li class='no-bio'></li>
 							</ul>
 						</div>
@@ -192,6 +192,11 @@
 						  <h3>Best Man</h3>
 						  <p>I am very excited for Patrick and Hannah's wedding next year. It brings me great pleasure to be Patrick's best man. One of the most striking things about Patrick is that he's always a very reliable person. Even though him and I have an almost eight year age gap, I can always seek help from him whenever needed. From teaching me how to utilize computer software to my schoolwork, Patrick has always been there.</p>
 						  <p>He's one of the most honest and moral persons that I know to this day. One of the most important thing's that I have learned from Patrick is the importance of family and what it means to cherish time with loved ones. Patrick and Hannah's bond is very admirable and I hope that their wedding will be amazing. </p>
+					    </div>
+					  
+					    <div id='charles-bio'>
+						  <h3>Charles Chiang</h3>
+						  <p>Charles and Patrick met freshman year of college. One of the most memorable quotes Charles remembers about Patrick was at the campus diner where Patrick picked the ugliest piece of pie and he said "the messier it is, the better it tastes." Charles knew that they would get along perfectly.  Their love for DOTA and cars brought them further together, and resulted in a close bond that not even living on opposite sides of the US can break.</p>
 					    </div>
 					    <div id='brian-bio'>
 						  <h3>Brian Tajo</h3>
