--- a/app/shower.html
+++ b/app/shower.html
@@ -5,54 +5,75 @@
 		<!--build:css styles/css/wedding.min.css -->
 		<link rel='stylesheet' href='./styles/css/reset.css' />
 		<link rel='stylesheet' href='./styles/css/wedding.css' />
+		<link rel='stylesheet' href='./styles/css/churchwedding.css' />
 		<!-- endbuild -->
 		<link rel="icon" href="images/favicon.png" type="image/png">
  		<title>Couple Shower | Hannah Tajo and Patrick's Wedding</title>
 	</header>
-	<body>
+	<body id="church-wedding-body">
 		<div id='page-wrapper'>
 			<div id='header'>
 					<nav id='top-nav'>
 						<li><a href='#main'>Home</a></li>
-						<li><a href='#story'>Our Story</a></li>
-						<li><a href='#engagement'>Engagement</a></li>
-						<li><a href='#wedding'>Wedding</a></li>
+						<li><a href='#churchwedding'>Church Wedding</a></li>
+						<li><a href='#coupleshower'>Couple's Shower</a></li>
 						<li><a href='#gallery'>Gallery</a></li>
-						<!--
-						<li><a href='#directions'>Directions</a></li> -->
 						<li><a href='#rsvp'>RSVP</a></li>
 					</nav>
 					<div id='header-text'>
 						<h1 id='top-name'>Hannah&nbsp;</h1>
 						<h1 id='bottom-name'>& Patrick</h1>
-						<h2>09.02.2018</h2>
+						<h2>05.05.2018</h2>
 					</div>
 				</div>
 			<div id='page-content'>
 				<div class='section' id='main'>
-					<img class='section-image' src='./styles/images/1024/main.jpg' />
+					<img class='section-image' src='./styles/images/churchwedding/main.png' />
 				</div>
-				<div class='section' id='church-wedding'>
+				<div class='section' id='churchwedding'>
 					<div class='section-container' id='church-wedding-text-container'>
 						<div>
 							<span class='section-title'>Church Wedding</span>
-							
-							<p> 
-							</p>
+							<img class='section-image' src='./styles/images/churchwedding/inside_church.png' />
+							<div id='wedding-section'>
+								<div>
+									<h3>When</h3>
+									<h4>Saturday, May 5<span class='superscript'>th</span>, 2018</h4>
+									<h4>12:00PM EST</h4>
+								</div>
+								<div>
+									<h3>Where</h3>
+									<h4>5345 Virginia Beach Blvd</h4>
+									<h4>Virginia Beach, VA 23462</h4>
+								</div>
+							</div>
 						</div>
 					</div>
 					<img class='section-image' src='./styles/images/churchwedding/stgregory.jpg' />
 				</div>
-				<div class='section' id='story'>
+				<div class='section' id='coupleshower'>
 					<div class='section-container' id='couple-shower-text-container'>
 						<div>
 							<span class='section-title'>Couple's Shower</span>
-							<p> 
-							</p>
+							<img class='section-image' src='./styles/images/churchwedding/airbnbhouse1.png' />
+							<div id='wedding-section'>
+								<div>
+									<h3>When</h3>
+									<h4>Saturday, May 5<span class='superscript'>th</span>, 2018</h4>
+									<h4>4:00PM EST</h4>
+								</div>
+								<div>
+									<h3>Where</h3>
+									<h4>1435 Bayville Street</h4>
+									<h4>Norfolk, VA 23503</h4>
+								</div>
+							</div>
 						</div>
 					</div>
-					<img class='section-image' src='./styles/images/churchwedding/airbnbhouse1.jpg' />
 					<img class='section-image' src='./styles/images/churchwedding/airbnbhouse2.jpg' />
+				</div>
+				<div class='section' id='world-map'>
+					<img class='section-image' src='./styles/images/churchwedding/world_map.png' />
 				</div>
 			</div>
 		</div>
