--- a/app/churchwedding.html
+++ b/app/churchwedding.html
@@ -2,7 +2,7 @@
 <html>
 	<header>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!--build:css styles/css/wedding.min.css -->
+		<!--build:css styles/css/churchwedding.min.css -->
 		<link rel='stylesheet' href='./styles/css/reset.css' />
 		<link rel='stylesheet' href='./styles/css/wedding.css' />
 		<link rel='stylesheet' href='./styles/css/churchwedding.css' />
