Adding new groomsmen, more tweaks

--- a/app/churchwedding.html
+++ b/app/churchwedding.html
@@ -23,6 +23,11 @@
 				<img id='gallery-image' src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=">/>
 			</div>
 		</div>
+		<div id='mobile-menu-icon'>
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 		<div id='page-wrapper'>
 			<div id='header'>
 					<nav id='top-nav'>
