--- a/app/index.html
+++ b/app/index.html
@@ -179,7 +179,7 @@
 						</div>
 						<div id='donna-bio'>
 						  <h3>Donna Siu</h3>
-						  <p>Patrick and I go way back, circa sophomore year of high school. Science was never my forte and I was in desperate need of Chemistry tutoring.  Sure enough, Patrick was there to save the day! Being neighbors at College Park, we'd chat about our lives, dreams and aspirations. I still remember the day Patrick started gushing about this awesome lady he met (our Hannah!) and the rest was history. Now that Patrick and Hannah moved to the SF Bay Area, we find ourselves once again neighbors and I’m just thrilled that these two are finally tying the knot! Lets get the party started!!</p>
+						  <p>Patrick and I go way back, circa sophomore year of high school. Science was never my forte and I was in desperate need of Chemistry tutoring.  Sure enough, Patrick was there to save the day! Being neighbors at College Park, we'd chat about our lives, dreams and aspirations. I still remember the day Patrick started gushing about this awesome lady he met (our Hannah!) and the rest was history. Now that Patrick and Hannah moved to the SF Bay Area, we find ourselves once again neighbors and I'm just thrilled that these two are finally tying the knot! Lets get the party started!!</p>
 						</div>
 						<div id='aaron-bio'>
 						  <h3>Aaron Sampliner</h3>
@@ -204,10 +204,10 @@
 					    		I met Patrick in college as a suitemate in Washington Hall. He introduced me to DoTA. Anyone who has played DoTA knows there is no better bonding experience than raging together while playing DoTA. Our friendship was defined by late night gaming, working out, partying, and putting all our academic efforts into doing as little actual work as possible. 
 					    	</p>
 					    	<p>
-								We became suitemates again in South Campus Commons when Patrick met Hannah. I distinctly remember Hannah always saying “Patrick, I’m hungry” and borrowing my snacks when I wasn’t there. 
+								We became suitemates again in South Campus Commons when Patrick met Hannah. I distinctly remember Hannah always saying “Patrick, I'm hungry” and borrowing my snacks when I wasn't there. 
 							</p>
 					    	<p>
-								I’m happy to have watched them grow as a couple, and I look forward to watching them grow together as husband and wife. 
+								I'm happy to have watched them grow as a couple, and I look forward to watching them grow together as husband and wife. 
 					    	</p>
 					    </div>
 					    <div id='brian-bio'>
