--- a/app/index.html
+++ b/app/index.html
@@ -204,7 +204,7 @@
 					    		I met Patrick in college as a suitemate in Washington Hall. He introduced me to DoTA. Anyone who has played DoTA knows there is no better bonding experience than raging together while playing DoTA. Our friendship was defined by late night gaming, working out, partying, and putting all our academic efforts into doing as little actual work as possible. 
 					    	</p>
 					    	<p>
-								We became suitemates again in South Campus Commons when Patrick met Hannah. I distinctly remember Hannah always saying "“"Patrick, I'm hungry" and borrowing my snacks when I wasn't there. 
+								We became suitemates again in South Campus Commons when Patrick met Hannah. I distinctly remember Hannah always saying "Patrick, I'm hungry" and borrowing my snacks when I wasn't there. 
 							</p>
 					    	<p>
 								I'm happy to have watched them grow as a couple, and I look forward to watching them grow together as husband and wife. 
