--- a/app/churchwedding.html
+++ b/app/churchwedding.html
@@ -113,7 +113,7 @@
 							</div>
 							<div class='sponsors'>
 							<h3>Flower Girl</h3>
-							<h4>Alaina Price</h4>
+							<h4>Alaina Price, Galen Lampert & Veda Lampert</h4>
 							</div>
 						</div>
 					</div>
