added ring bearer and message

--- a/app/churchwedding.html
+++ b/app/churchwedding.html
@@ -115,6 +115,10 @@
 							<h3>Flower Girl</h3>
 							<h4>Alaina Price, Galen Lampert & Veda Lampert</h4>
 							</div>
+							<div class='sponsors'>
+							<h3>Ring Bearer</h3>
+							<h4>James Parker</h4>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -135,6 +139,7 @@
 									<h4>Norfolk, VA 23503</h4>
 								</div>
 							</div>
+							<p class='italic align-center'>The couple shower will be outside. Please dress accordingly!</p>
 						</div>
 					</div>
 					<img class='section-image' src='./styles/images/churchwedding/airbnbhouse2.jpg' />
