added nuri text

--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,7 @@
 								<li id='katie'></li>
 								<li id='olivia'></li>
 								<li id='wennie'></li>
+								<li id='nuri'></li>
 							</ul>
 						</div>
 					</div>
@@ -180,6 +181,11 @@
 						<div id='donna-bio'>
 						  <h3>Donna Siu</h3>
 						  <p>Patrick and I go way back, circa sophomore year of high school. Science was never my forte and I was in desperate need of Chemistry tutoring.  Sure enough, Patrick was there to save the day! Being neighbors at College Park, we'd chat about our lives, dreams and aspirations. I still remember the day Patrick started gushing about this awesome lady he met (our Hannah!) and the rest was history. Now that Patrick and Hannah moved to the SF Bay Area, we find ourselves once again neighbors and I'm just thrilled that these two are finally tying the knot! Lets get the party started!!</p>
+						</div>
+						<div id='nuri-bio'>
+						  <h3>Nuri Cha</h3>
+						  <p>I met Hannah in our first year of college. Our dorm rooms were next door to each other, but we didn’t get close until the spring semester when we joined the same sorority. After getting to know Hannah, I gained a friend I could depend on, speak honestly with, trust, and stumble through the ups and downs of college with. I would not have made it through college without our late night vent sessions and her encouragement to embrace new opportunities.</p>
+						  <p> When Hannah met Pat, I could tell immediately that their relationship was different, that their relationship would last. I’ve seen their relationship grow and could not be more excited for their upcoming wedding. Congratulations, Hannah and Pat!</p>
 						</div>
 						<div id='aaron-bio'>
 						  <h3>Aaron Sampliner</h3>
