Adding nuri picture and other events section

--- a/app/index.html
+++ b/app/index.html
@@ -222,11 +222,26 @@
 					    </div>
 					</div>
 				</div>
-				<!--
-				<div class='section' id='accomadations'>
-					<div class='section-title'>Accomadations</div>
+				<div class='section' id='other-events'>
+					<div class='section-container' id='other-events-container'>
+						<div>
+							<span class='section-title'>Other Events</span>
+							<div class='event'>
+								<h4>Saturday 09.01.18</h4>
+								<p>Mass at 5 PM with a blessing from one of Hannah's oldest friends Reverend Andrew Haissig after church.  Afterwards, we be hanging out in Market Square to take pictures (weather permitting).
+								</p>
+								<p>
+									<a class='link' href='https://stmaryoldtown.org/'>https://stmaryoldtown.org/</a>
+								</p>
+							</div>
+							<div class='event'>
+								<h4>Saturday 09.03.18</h4>
+								<p>Appetizers and Games at <a class='link' href='https://goo.gl/maps/YDyauXXv6VM2' target='_'>3000 Spout Run Parkway</a>. If you're still in town and can't get enough of us, Hannah and Patrick will be hosting a casual gathering at the club room of Cardinal House Condominiums
+								</p>
+							</div>
+						</div>
+					</div>
 				</div>
-			-->
 				<div class='section' id='gallery'>
 					<div class='section-container' id='gallery-text-container'>
 						<span class='section-title'>Gallery</span>
