add new tab open for link

--- a/app/index.html
+++ b/app/index.html
@@ -231,7 +231,7 @@
 								<p>Mass at 5 PM with a blessing from one of Hannah's oldest friends Reverend Andrew Haissig after church.  Afterwards, we be hanging out in Market Square to take pictures (weather permitting).
 								</p>
 								<p>
-									<a class='link' href='https://stmaryoldtown.org/'>https://stmaryoldtown.org/</a>
+									<a class='link' href='https://stmaryoldtown.org/' target="_">https://stmaryoldtown.org/</a>
 								</p>
 							</div>
 							<div class='event'>
