adding gulp cache buster

--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!--build:css styles/css/wedding.min.css -->
-		<link rel='stylesheet' href='styles/css/reset.css?v1' />
-		<link rel='stylesheet' href='styles/css/wedding.css?v1' />
+		<link rel='stylesheet' href='styles/css/reset.css' />
+		<link rel='stylesheet' href='styles/css/wedding.css' />
 		<!-- endbuild -->
 		<link rel="icon" href="images/favicon.png" type="image/png">
  		<title>Hannah Tajo and Patrick's Wedding</title>
