--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,15 @@
 				</div>
 				<img id='gallery-image' src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=">/>
 			</div>
+			<div id='rsvp-form-wrapper'>
+				<form id='rsvp-form'>
+					Please enter your first and last name to search for your RSVP:
+					<label for='firstName'>First Name:<input type='text' name='firstName' id='firstName' /></label>
+					<label for='lastName'>Last Name: <input type='text' name='lastName' id='lastName'/></label>
+					<input id='rsvp-name' type='submit'>
+				</form>
+
+			</div>
 		</div>
 		<div id='mobile-menu-icon'>
 			<span></span>
@@ -254,8 +263,7 @@
 					<div class='section-container' id='rsvp-text-container'>
 						<div>
 							<span class='section-title'>RSVP</span>
-							<p>Coming Soon!</p>
-							<!--<div class='align-center'><button>Click to RSVP</button></div> -->
+							<div class='align-center'><button id='rsvp'>Click to RSVP!</button></div>
 						</div>
 					</div>
 					<img class='section-image' src='./styles/images/1024/rsvp.jpg' />
