--- a/app/index.html
+++ b/app/index.html
@@ -251,16 +251,26 @@
 						<div>
 							<span class='section-title'>Other Events</span>
 							<div class='event'>
-								<h4>Saturday 09.01.18</h4>
-								<p>Mass at 5 PM with a blessing from one of Hannah's oldest friends Reverend Andrew Haissig after church.  Afterwards, we be hanging out in Market Square to take pictures (weather permitting).
-								</p>
+								<h4>Mass and Marriage Blessing</h4>
+								<h5>Saturday 09.01.18 - 5:00 PM</h5>
+								<h5>
+									<a class='link' href='https://stmaryoldtown.org/' target="_">The Basilica of Saint Mary</a>
+								</h5>
+								<h5>
+									310 S Royal St, Alexandria, VA 22314
+								</h5>
+								</br>
 								<p>
-									<a class='link' href='https://stmaryoldtown.org/' target="_">https://stmaryoldtown.org/</a>
+									Join us for Catholic mass at 5 PM with a blessing from one of Hannah's oldest friends Reverend Andrew Haissig after church. Afterwards, we will be taking formal pictures.<br/>
+									We will then head over to Murphy's Irish Pub in Alexandria, VA.  Join us for a drink!&nbsp;&nbsp;<span class='italic'>(this is a non-hosted event)</span>
 								</p>
 							</div>
 							<div class='event'>
-								<h4>Saturday 09.03.18</h4>
-								<p>Appetizers and Games at <a class='link' href='https://goo.gl/maps/YDyauXXv6VM2' target='_'>3000 Spout Run Parkway</a>. If you're still in town and can't get enough of us, Hannah and Patrick will be hosting a casual gathering at the club room of Cardinal House Condominiums
+								<h4>Appetizers and Games</h4>
+								<h5>Saturday 09.03.18</h5>
+								<h5><a class='link' href='https://goo.gl/maps/YDyauXXv6VM2' target='_'>3000 Spout Run Parkway</a></h5>
+								<p>
+								 	If you're still in town and can't get enough of us, Hannah and Patrick will be hosting a casual gathering with light appetizers and drinks at the club room of Cardinal House Condominiums. There will be games, pool, and karaoke.
 								</p>
 							</div>
 						</div>
